update proposal view

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,10 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+communitycrit/.DS_Store
+.DS_Store
+.idea/misc.xml
+.idea/modules.xml
+.idea/opinionviz.iml
+.idea/vcs.xml
+.idea/workspace.xml
