--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@ communitycrit/.DS_Store
 .idea/workspace.xml
 CommentBox/server/node_modules/
 CommentBox/server/package-lock.json
+CommentBox/test.css
